# physicalai-humanoidrobotics-book

./: .gitignore  .markdown-link-check.json  HOMEPAGE_IMPLEMENTATION_GUIDE.md  HOMEPAGE_REDESIGN_SUMMARY.md  package-lock.json  requirements.txt  vercel.json
.claude/: settings.local.json
.claude/agents/: robotics-book-web-architect.md
.claude/skills/: robotics-ui-architect.md  robotics-web-builder.md
.specify/memory/: constitution.md
docs/: preface.mdx
history/prompts/constitution/: 001-physical-ai-robotics-textbook-constitution.constitution.prompt.md
history/prompts/general/: 001-clear-conversation-history.general.prompt.md
history/prompts/module3-isaac/: 001-module3-isaac-spec.spec.prompt.md  002-module3-isaac-plan-phase1.plan.prompt.md  003-module3-isaac-tasks.tasks.prompt.md
history/prompts/ros2-nervous-system/: 001-create-module1-ros2-spec.spec.prompt.md  002-generate-module1-tasks.tasks.prompt.md
history/prompts/textbook-preface/: 001-create-textbook-preface-spec.spec.prompt.md  002-generate-textbook-preface-tasks.tasks.prompt.md  003-implement-preface-setup-foundation.green.prompt.md
i18n/: glossary.yml
module-1-ros2-fundamentals/: README.md
module-1-ros2-fundamentals/.github/workflows/: ros2-ci.yml
module-1-ros2-fundamentals/docker/: Dockerfile.humble
module-1-ros2-fundamentals/launch/: template.launch.py
module-1-ros2-fundamentals/src/textbook_templates/: minimal_node_template.py  package.xml.template
module-2-digital-twin/: .gitignore  README.md
module-2-digital-twin/.github/workflows/: gazebo-ci.yml  unity-ci.yml
module-2-digital-twin/docker/: Dockerfile.gazebo
module-2-digital-twin/src/ch1_gazebo_physics/: CMakeLists.txt  package.xml
module-2-digital-twin/src/ch1_gazebo_physics/launch/: articulated_arm.launch.py  integration_demo.launch.py  spawn_rigid_body.launch.py  wheeled_robot.launch.py
module-2-digital-twin/src/ch1_gazebo_physics/urdf/: 3dof_arm.urdf  diff_drive_robot.urdf  integration_humanoid.urdf  rigid_body.urdf
module-2-digital-twin/src/ch1_gazebo_physics/worlds/: empty_world.sdf  obstacle_course.sdf
module-2-digital-twin/src/ch2_unity_rendering/: README.md
module-2-digital-twin/src/ch2_unity_rendering/ros2_workspace/src/unity_bridge/: README.md  package.xml  setup.py
module-2-digital-twin/src/ch2_unity_rendering/ros2_workspace/src/unity_bridge/launch/: unity_ros_bridge.launch.py
module-2-digital-twin/src/ch3_sensor_simulation/: CMakeLists.txt  README.md  package.xml
module-2-digital-twin/src/ch3_sensor_simulation/config/: camera_params.yaml  imu_params.yaml  lidar_params.yaml
module-2-digital-twin/src/textbook_templates/: README.md  gazebo_spawn.launch.py.template  package.xml.template
module-2-digital-twin/tests/ch1_physics/: README.md  test_collision_detection.py  (+1 more)
module-3-isaac/: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  package.xml  requirements.txt
module-3-isaac/chapter-1-isaac-sim/: 01-intro.mdx  02-environment-creation.mdx  03-sensor-configuration.mdx  04-data-generation.mdx  05-domain-randomization.mdx  06-sim-to-real.mdx
module-3-isaac/chapter-1-isaac-sim/assets/: sensor-configs.yaml
module-3-isaac/chapter-1-isaac-sim/config/: randomization-tier1.yaml  randomization-tier2.yaml  randomization-tier3.yaml
module-3-isaac/chapter-1-isaac-sim/exercises/: ex1-create-scene.py  ex2-generate-dataset.py  ex3-domain-randomization.py  ex4-export-dataset.py  validation.py
module-3-isaac/chapter-2-isaac-ros/: 01-intro.mdx  02-visual-odometry.mdx  03-stereo-vslam.mdx  04-loop-closure.mdx  05-map-management.mdx  06-performance-tuning.mdx  07-debugging.mdx
module-3-isaac/chapter-2-isaac-ros/config/: camera-calibration.yaml  rviz-vslam.rviz  vslam-params.yaml
module-3-isaac/chapter-2-isaac-ros/exercises/: ex1-visual-odometry.py  ex2-build-map.py  ex3-relocalization.py  ex4-performance-benchmark.py  validation.py
module-3-isaac/chapter-2-isaac-ros/launch/: vslam-jetson.launch.py  vslam-sim.launch.py
module-3-isaac/chapter-3-nav2/: 01-intro.mdx  02-global-planning.mdx  03-footstep-planning.mdx  04-local-planning.mdx  05-recovery-behaviors.mdx  CMakeLists.txt  README.md  package.xml
module-3-isaac/chapter-3-nav2/config/: nav2-params-jetson.yaml  nav2-params.yaml  nav2.rviz  navigate_w_replanning_and_recovery.xml
module-3-isaac/chapter-3-nav2/exercises/: exercise-1-basic-navigation.md  exercise-2-footstep-planning.md  exercise-3-recovery-behaviors.md  exercise-4-performance-optimization.md
module-3-isaac/chapter-3-nav2/launch/: nav2-jetson.launch.py  nav2-sim.launch.py
module-3-isaac/chapter-4-integration/: 01-integration-overview.mdx  02-system-optimization.mdx  03-safety-considerations.mdx  04-deployment-workflows.mdx  README.md  integration-launch.py  integration-params.yaml
module-3-isaac/shared/assets/: warehouse-scene.usd
module-3-isaac/shared/datasets/recorded-trajectories/: README.md
module-3-isaac/shared/datasets/sample-warehouse/: README.md  labels.json  metadata.json
module-3-isaac/shared/utils/: metrics.py  tier_detection.py  validation.py
module-3-isaac/tests/: test_chapter1_simulation.py  test_chapter2_vslam.py  test_metrics.py  test_tier_detection.py
physicalai-humanoidrobotics-book/: COMPONENT_LIBRARY.md  COMPONENT_QUICK_START.md  DELIVERY_SUMMARY.txt  DESIGN_SYSTEM_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LAYOUT_IMPLEMENTATION_GUIDE.md  LAYOUT_QUICK_REFERENCE.md  LAYOUT_SPECIFICATIONS.md  MODULE_LAYOUTS_INDEX.md  PROFESSIONAL_LAYOUTS_SUMMARY.md  PROFESSIONAL_UI_README.md  UI_DESIGN_SYSTEM.md  VISUAL_STYLE_GUIDE.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
physicalai-humanoidrobotics-book/docs/: preface.mdx
scripts/: validate-readability.py
specs/001-textbook-preface/: plan.md  spec.md  tasks.md
specs/002-ros2-nervous-system/: plan.md  spec.md  tasks.md
specs/003-module2-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-module3-isaac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+69 files in other folders)
