<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_nav2</name>
  <version>1.2.0</version>
  <description>Isaac ROS Navigation 2 (Nav2) Integration Package for Humanoid Robotics</description>
  <maintainer email="nvidia@nvidia.com">NVIDIA</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://developer.nvidia.com/isaac-ros/isaac-ros-nav2</url>
  <author>NVIDIA</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_world_model</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>

  <depend>isaac_ros_common</depend>
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_tensor_list_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>