<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ch3_sensor_simulation</name>
  <version>0.1.0</version>
  <description>Chapter 3: Sensor Simulation - LiDAR, Depth Cameras, and IMUs in Gazebo</description>

  <maintainer email="learn@physicalai.org">Physical AI Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Gazebo Dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <!-- Robot Description -->
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
